k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      serviceAccountName: vault-app-access
      containers:
      - name: nodejs-app
        image: rihab26/nodejs-app:c42d9b3
        ports:
        - containerPort: 3001
        - containerPort: 9090
      - name: node-exporter
        image: rihab26/nodejs-app:c42d9b3
        ports:
        - containerPort: 9100
