k8s/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nodejs-app
  namespace: app-ns
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      serviceAccountName: vault-app-access
      containers:
        - name: nodejs-app
          image: rihab26/nodejs-app:20250728-93f7253
          ports:
            - containerPort: 3001
            - containerPort: 9090
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
        - name: node-exporter
          image: prom/node-exporter:v1.6.1
          ports:
            - containerPort: 9100
  strategy:
    canary:
      canaryService: nodejs-app-canary
      stableService: nodejs-app-stable
      steps:
        - setWeight: 20
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 30s
        - analysis:
            templates:
              - templateName: success-rate
            args:
              - name: service-name
                value: nodejs-app
        - setWeight: 100
