k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  namespace: app-ns  
  labels:
    app: nodejs-app  
spec:
  selector:
    app: nodejs-app  
  ports:
    - name: http
      protocol: TCP
      port: 80          
      targetPort: 3001  
      nodePort: 31982   
  type: NodePort
