k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-stable
spec:
  selector:
    app: nodejs-app
    rollouts-pod-template-hash: stable
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-canary
spec:
  selector:
    app: nodejs-app
    rollouts-pod-template-hash: canary
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
